# bubbaloop-nodes-official

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SOUL.md  build_proto.py  config.yaml  main.py  node.yaml  nodes.yaml  pixi.toml
.github/workflows/: ci.yml  release.yml
camera-detector/: main.py  node.yaml  pixi.toml
camera-detector/configs/: tapo_terrace.yaml
camera-object-detector/: main.py  node.yaml  pixi.toml
camera-object-detector/configs/: tapo_entrance.yaml  tapo_terrace.yaml
camera-object-detector/tests/: test_main.py
camera-snapshot/: main.py  node.yaml  requirements.txt
camera-snapshot/configs/: entrance.yaml
camera-vlm/: benchmark.py  main.py  node.yaml  pixi.toml
camera-vlm/configs/: tapo_terrace.yaml
camera-vlm/tests/: test_main.py
docs/superpowers/plans/: 2026-04-04-rf-detr-detector.md  2026-04-06-shm-raw-frame-pipeline.md
docs/superpowers/specs/: 2026-04-04-rf-detr-detector-design.md  2026-04-06-shm-raw-frame-pipeline-design.md
foxglove/: Cargo.toml  node.yaml  pixi.toml
foxglove/configs/: topics.yaml
foxglove/src/: foxglove_node.rs  lib.rs  messages.rs
frame-embedder/: config.yaml  node.yaml  pixi.toml  requirements.txt
frame-embedder/src/: main.py  model.py  preprocessing.py
frame-embedder/tests/: test_model.py  test_preprocessing.py
gpio-sensor/: Cargo.toml  node.yaml
gpio-sensor/configs/: digital.yaml  motion.yaml  temperature.yaml
gpio-sensor/src/: config.rs  gpio_sensor_node.rs  lib.rs  main.rs
inference/: Cargo.toml  config.yaml  node.yaml  pixi.toml
jepa-tracker/: README.md  config.yaml  main.py  node.yaml  pixi.toml
jepa-tracker/tests/: test_main.py
jepa-video-embedder/: README.md  config.yaml  main.py  node.yaml  pixi.toml
jepa-video-embedder/tests/: test_main.py
mcap-recorder/: .gitignore  README.md  config.yaml  main.py  node.yaml  pixi.toml
mcap-recorder/recorder/: __init__.py  commands.py  config.py  mcap_writer.py  node.py  session.py
mcap-recorder/tests/: test_commands.py  test_config.py  test_mcap_writer.py
mqtt-bridge/: main.py  node.yaml  requirements.txt
mqtt-bridge/configs/: home-assistant.yaml
network-monitor/: .gitignore  build_proto.py  config.yaml  main.py  node.yaml  pixi.toml
network-monitor/protos/: network_monitor.proto
oak-camera/: README.md  config.yaml  main.py  node.yaml  pixi.toml
oak-camera/tests/: test_main.py
openmeteo/: Cargo.toml  build.rs  main.py  node.yaml  pixi.toml
openmeteo/configs/: config.yaml
openmeteo/protos/: header.proto  weather.proto
openmeteo/src/: api.rs  config.rs  lib.rs  openmeteo_node.rs  proto.rs
protos/: agent.proto
recorder/: Cargo.toml  node.yaml  pixi.toml
recorder/configs/: topics.yaml
recorder/src/: lib.rs  recorder_node.rs
rf-detr-detector/: main.py  pixi.toml
rf-detr-detector/configs/: tapo_terrace.yaml
rfdetr-detector/: main.py  node.yaml  pixi.toml
rfdetr-detector/configs/: tapo_entrance.yaml  tapo_terrace.yaml
rfdetr-detector/tests/: test_main.py
rtsp-camera/: Cargo.toml  README.md  build.rs  cbor_measure.py  config.yaml  node.yaml  pixi.toml
rtsp-camera/.cargo/: config.toml
rtsp-camera/configs/: config_cpu.yaml  entrance.yaml  terrace.yaml
rtsp-camera/src/: cbor_wire.rs  config.rs  h264_capture.rs  h264_decode.rs  lib.rs  main.rs  proto.rs  rtsp_camera_node.rs
serial-sensor/: main.py  node.yaml  requirements.txt
serial-sensor/configs/: arduino.yaml
skills/data-ops/: SKILL.md
skills/memory/: SKILL.md
skills/node-management/: SKILL.md
skills/system/: SKILL.md
skills/watchers/: SKILL.md
skills/zenoh-core/: SKILL.md
src/: agent.py  data_router.py  http_api.py  memory.py  prompt_builder.py  watcher_engine.py  world_model.py  zenoh_bridge.py
src/llm/: __init__.py  openai_compat.py  provider.py
src/tools/: __init__.py  data_tools.py  memory_tools.py  node_tools.py  registry.py  system_tools.py  watcher_tools.py  zenoh_tools.py
system-telemetry/: Cargo.toml  config.yaml  main.py  node.yaml  pixi.toml
system-telemetry/protos/: header.proto  system_telemetry.proto
system-telemetry/src/: main.rs  node.rs  proto.rs
video-embedder/: README.md  config.yaml  main.py  node.yaml  pixi.toml
video-embedder/tests/: test_main.py
