[package]
name = "gpio_sensor"
version = "0.1.0"
authors = ["Bubbaloop Team"]
license = "Apache-2.0"
edition = "2021"
description = "GPIO/edge device sensor with simulation mode and rppal/gpio-cdev hardware support"

[dependencies]
anyhow = "1.0"
argh = "0.1"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
zenoh = "1.7"
hostname = "0.4"

# ── Real hardware backends (enable when deploying on physical hardware) ──────
# Raspberry Pi / Linux GPIO via rppal (I2C, SPI, GPIO, PWM, UART):
#   rppal = { version = "0.19", optional = true }
#
# Generic Linux GPIO chardev via gpio-cdev:
#   gpio-cdev = { version = "0.6", optional = true }
#
# [features]
# rppal = ["dep:rppal"]
# gpio-cdev = ["dep:gpio-cdev"]
# ─────────────────────────────────────────────────────────────────────────────

[[bin]]
name = "gpio_sensor_node"
path = "src/main.rs"

[workspace]
