[package]
name = "inference"
version = "0.1.0"
authors = ["Bubbaloop Team"]
license = "Apache-2.0"
edition = "2021"
description = "Inference node for processing camera data"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
zenoh = { version = "1.7", features = ["shared-memory"] }
env_logger = "0.11"
log = "0.4"
ctrlc = "3.4"
hostname = "0.4"
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex-lite = "0.1"
bubbaloop-schemas = { git = "https://github.com/kornia/bubbaloop.git", branch = "main" }

[[bin]]
name = "inference_node"
path = "src/bin/inference_node.rs"

[workspace]
