[package]
name = "openmeteo"
version = "0.1.0"
authors = ["Bubbaloop Team"]
license = "Apache-2.0"
edition = "2021"
description = "Open-Meteo weather data publisher for Zenoh"

[dependencies]
argh = "0.1"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ros-z = { git = "https://github.com/ZettaScaleLabs/ros-z.git", branch = "main", features = ["protobuf"] }
zenoh = "1.7"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
hostname = "0.4"
regex-lite = "0.1"
bubbaloop-schemas = { git = "https://github.com/kornia/bubbaloop.git", branch = "main", features = ["ros-z"] }

[[bin]]
name = "openmeteo_node"
path = "src/bin/openmeteo_node.rs"

[workspace]
