[package]
name = "rtsp_camera"
version = "0.1.0"
authors = ["Bubbaloop Team"]
license = "Apache-2.0"
edition = "2021"
description = "RTSP camera capture and H264 processing"

[dependencies]
argh = "0.1"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["full"] }
flume = "0.12"
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"
ros-z = { git = "https://github.com/ZettaScaleLabs/ros-z.git", branch = "main", features = ["protobuf"] }
zenoh = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
hostname = "0.4"
bubbaloop-schemas = { git = "https://github.com/kornia/bubbaloop.git", branch = "main", features = ["ros-z"] }

[[bin]]
name = "cameras_node"
path = "src/bin/cameras_node.rs"

[workspace]
