[package]
name = "rtsp_camera"
version = "0.1.0"
authors = ["Bubbaloop Team"]
license = "Apache-2.0"
edition = "2021"
description = "RTSP camera capture and H264 processing"

[dependencies]
bubbaloop-node = { git = "https://github.com/kornia/bubbaloop.git", branch = "main" }
anyhow = "1"
log = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex-lite = "0.1"
flume = "0.12"
gstreamer = "0.24"
gstreamer-app = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
prost = "0.14"

[build-dependencies]
prost-build = "0.14"

[[bin]]
name = "rtsp_camera_node"
path = "src/main.rs"

[workspace]
