[package]
name = "system-telemetry"
version = "0.1.0"
edition = "2021"
description = "System telemetry metrics (CPU, memory, disk, network, load)"

[[bin]]
name = "system_telemetry_node"
path = "src/main.rs"

[dependencies]
# Shared protobuf schemas
bubbaloop-schemas = { git = "https://github.com/kornia/bubbaloop.git", branch = "main" }

zenoh = "1.7.2"

# System information
sysinfo = "0.33"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
prost = "0.14"

# CLI and logging
argh = "0.1"
log = "0.4"
env_logger = "0.11"

# Validation
regex-lite = "0.1"

# Error handling
anyhow = "1.0"

# Graceful shutdown
ctrlc = "3.4"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.14"

[workspace]
